[package]
name = "openlark-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "现代化飞书开放平台 Rust SDK - 简化客户端，支持功能驱动的模块化编译"

[dependencies]
# Core dependencies
openlark-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Additional dependencies for unified client
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }

# WebSocket dependencies
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
lark-websocket-protobuf = { workspace = true, optional = true }
url = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
log = { workspace = true, optional = true }

# P0 Phase 1 业务模块依赖
openlark-auth = { workspace = true, optional = true }
openlark-communication = { workspace = true, optional = true }
openlark-docs = { workspace = true, optional = true }
openlark-cardkit = { workspace = true, optional = true }
openlark-meeting = { workspace = true, optional = true }
openlark-security = { workspace = true, optional = true }

# Phase 2+ 模块依赖（暂时只保留存在的）
openlark-hr = { workspace = true, optional = true }  # 人力资源模块
openlark-ai = { workspace = true, optional = true }   # AI服务模块
# openlark-mail = { workspace = true, optional = true } # 暂时注释，未加入workspace

[features]
default = ["auth", "communication"]  # 单入口下建议默认启用认证链路

# Core client feature
client = []

auth = ["openlark-auth"]

# WebSocket support
websocket = ["tokio-tungstenite", "futures-util", "lark-websocket-protobuf", "url", "prost", "reqwest", "log"]

# P0 阶段 1 业务服务功能
# auth 现在默认启用，不再需要功能标志
communication = ["openlark-communication"]    # 通讯和消息
docs = ["openlark-docs"]                    # 文档和知识库
security = ["openlark-security"]              # 安全认证

# P0.5 Phase 2 business service features
hr = ["openlark-hr"]                    # 人力资源
ai = ["openlark-ai"]                     # AI服务

# Additional business services
bitable = ["openlark-docs"]            # 多维表格
cardkit = ["openlark-cardkit"]         # CardKit 卡片能力（按 api_list_export.csv 生成的 meta 调用链）
meeting = ["openlark-meeting"]         # 会议服务

# P0 3-layer architecture features
core-layer = [
    "communication",  # IM、消息、联系人管理
    "docs",           # 云文档、表格、知识库
    "security",       # 安全认证
]

# Convenience features - P0模块组合
p0-services = [
    "communication", "docs", "security"
]

# Complete client features for easy selection
client-communication = ["client", "communication"]
client-docs = ["client", "docs"]
client-security = ["client", "security"]
client-p0 = ["client", "p0-services"]

[dev-dependencies]
tokio-test = "0.4"
wiremock = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
