[package]
name = "openlark-communication"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
openlark-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["im", "contact", "moments"]
full = ["im", "contact", "moments"]

im = []
contact = []
moments = []
