[package]
name = "openlark-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core infrastructure for OpenLark SDK"

[lib]
doctest = false

[[test]]
name = "error_context"
path = "../../tests/unit/error/mod.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
quick_cache = { workspace = true }
futures-util = { workspace = true }
regex = { workspace = true }
tokio-tungstenite = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
openlark-protocol = { workspace = true, optional = true }
lark-websocket-protobuf = { version = "0.1", optional = true }
http = "1.0"
num_cpus = "1.16"
urlencoding = "2.1"
serde_with = "3"

# Internal dependencies暂时移除，避免循环依赖

[features]
default = ["testing"]

# Tracing initialization support
tracing-init = ["tracing-subscriber"]

# WebSocket support
websocket = ["tokio-tungstenite", "prost", "openlark-protocol", "lark-websocket-protobuf"]

# OpenTelemetry support
otel = ["tracing-init", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]

# Testing utilities (for other crates to use in tests)
testing = ["tracing-init"]


[dependencies.opentelemetry]
workspace = true
optional = true

[dependencies.opentelemetry_sdk]
workspace = true
optional = true

[dependencies.opentelemetry-otlp]
workspace = true
optional = true

[dependencies.tracing-opentelemetry]
workspace = true
optional = true

[dev-dependencies]
rstest = { workspace = true }
tracing-test = { workspace = true }
tracing-subscriber = { workspace = true }
