[package]
name = "openlark-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "OpenLark 核心基础设施 crate - HTTP 客户端、错误处理、认证和核心工具"
repository.workspace = true
homepage.workspace = true
keywords = ["feishu", "lark", "api", "sdk", "core"]
categories = ["api-bindings", "web-programming", "development-tools"]

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true }
regex = { workspace = true }
tokio-tungstenite = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
openlark-protocol = { workspace = true, optional = true }
lark-websocket-protobuf = { version = "0.1", optional = true }
http = { workspace = true }
num_cpus = { workspace = true }
urlencoding = "2.1"
serde_with = { workspace = true }

# Internal dependencies暂时移除，避免循环依赖

[features]
default = ["testing"]

# Tracing initialization support
tracing-init = ["tracing-subscriber"]

# WebSocket support
websocket = ["tokio-tungstenite", "prost", "openlark-protocol", "lark-websocket-protobuf"]

# OpenTelemetry support
otel = ["tracing-init", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]

# Testing utilities (for other crates to use in tests)
testing = ["tracing-init"]


[dependencies.opentelemetry]
workspace = true
optional = true

[dependencies.opentelemetry_sdk]
workspace = true
optional = true

[dependencies.opentelemetry-otlp]
workspace = true
optional = true

[dependencies.tracing-opentelemetry]
workspace = true
optional = true

[dev-dependencies]
rstest = { workspace = true }
tracing-test = { workspace = true }
tracing-subscriber = { workspace = true }
wiremock = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["base64", "futures-util", "hmac", "lark-websocket-protobuf", "num_cpus", "openlark-protocol", "prost", "quick_cache", "rand", "regex", "sha2", "tokio-tungstenite"]
