[package]
name = "openlark-hr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "open-lark-hr-suite module for OpenLark SDK"

[features]
default = ["attendance", "corehr", "compensation", "payroll", "performance", "okr", "hire", "ehr"]

attendance = []
corehr = []
compensation = []
payroll = []
performance = []
okr = []
hire = []
ehr = []

hr-full = ["attendance", "corehr", "compensation", "payroll", "performance", "okr", "hire", "ehr"]

[dependencies]
openlark-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
wiremock = { workspace = true }
mockall = { workspace = true }
serial_test = "3.2"
tempfile = { workspace = true }

[[test]]
name = "unit"
path = "../../tests/unit/hr/mod.rs"
