[package]
name = "openlark-hr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OpenLark 人力资源模块 - 招聘、CoreHR、考勤、薪酬等 562 个 API"
repository.workspace = true
homepage.workspace = true
keywords = ["feishu", "lark", "hr", "sdk", "api"]
categories = ["api-bindings", "web-programming", "development-tools"]

[features]
default = ["attendance", "corehr", "compensation", "payroll", "performance", "okr", "hire", "ehr"]

attendance = []
corehr = []
compensation = []
payroll = []
performance = []
okr = []
hire = []
ehr = []

hr-full = ["attendance", "corehr", "compensation", "payroll", "performance", "okr", "hire", "ehr"]

[dependencies]
openlark-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
wiremock = { workspace = true }
mockall = { workspace = true }
serial_test = "3.2"
tempfile = { workspace = true }
