[package]
name = "openlark-mail"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "OpenLark 邮件模块 - 提供飞书邮件组 API"

[dependencies]
openlark-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = ["v1", "async"]
async = ["tokio"]

# 邮件 API 版本
v1 = []

# 完整功能集
full = ["v1", "async"]
