[package]
name = "openlark-people"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
openlark-core = { workspace = true }
openlark-protocol = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
websocket = ["openlark-protocol", "tokio"]
async = ["tokio"]