[package]
name = "openlark-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lark/Feishu websocket client protobuf definitions."
keywords = ["sdk", "feishu", "lark", "websocket"]
categories = ["api-bindings"]
documentation = "https://docs.rs/open-lark"
repository = "https://github.com/foxzool/open-lark"

[dependencies]
bytes = "1.6.0"
prost = "0.13.1"


[build-dependencies]
prost-build = "0.12.6"