[package]
name = "openlark-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Lark/Feishu websocket client protobuf definitions."
keywords = ["sdk", "feishu", "lark", "websocket"]
categories = ["api-bindings"]
documentation = "https://docs.rs/openlark-protocol"
repository = "https://github.com/foxzool/openlark"

[lints]
workspace = true

[dependencies]
bytes = "1.6.0"
prost = "0.13.1"


[build-dependencies]
prost-build = "0.12.6"


[package.metadata.cargo-machete]
ignored = ["bytes"]
